# shaunporwal.github.io

./: .gitignore  .nojekyll  CNAME  Projects.md  README.html  README.md  _environment  _projects.Rmd  _quarto.yml  _site.yaml  _site.yml  about.html  about.qmd  hello.py  index.Rmd  index.html  index.qmd  listings.json  projects.Rmd  projects.html  projects.qmd  pyproject.toml  readings.Rmd  readings.html  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yaml
_site/: index.html  projects.html  search.json
docs/: about.html  index.html  listings.json  projects.html  search.json
media/: 3dheron.html  3dheron.qmd  banana.blend  banana.blend1  banana.glb  banana.html  banana.qmd  banana2.glb  banana3.glb  banana_remeshed1.glb  banana_upright.blend  banana_upright.blend1  banana_upright.glb  banana_upright2.glb  heron.html  heron.qmd  nft_monkey.html  nft_monkey.qmd
old_files/: _projects.Rmd  projects.html
posts/best-resume-builder/: index.html  index.qmd
posts/building-antifragility/: index.qmd
posts/hundred-day-coding-streak/: index.html  index.qmd
posts/i-hate-stupid-rules/: index.html  index.qmd
posts/just-let-it-happen/: index.qmd
posts/no-punctuation-in-quotes/: index.html  index.qmd
posts/post-with-code/: index.html  index.qmd
posts/python-package-automation/: index.html  index.qmd
posts/site-building-is-incredibly-annoying/: index.html  index.qmd
posts/solitude-changed-me/: index.qmd
posts/washington-EVs/: index.qmd
posts/webdev-is-tricky/: index.html  index.qmd
posts/webdev-sucks/: index.html  index.qmd
(+8 files in other folders)
