[tool.poetry]
name = "shaunporwal-github-io"
version = "0.1.0"
description = "Shaun Personal Site"
authors = ["Shaun Porwal <shaun.porwal@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"